[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/PortalControl.gd" type="Script" id=1]
[ext_resource path="res://Default Background Tiles.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 224, 320, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.28172, 5.93582 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 288, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6.11964, 6.59799 )

[node name="Controller" type="Node2D"]
script = ExtResource( 1 )

[node name="Portal1" type="Area2D" parent="."]
collision_mask = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="Portal1"]
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal1"]
shape = SubResource( 3 )

[node name="Portal2" type="Area2D" parent="."]
position = Vector2( 128, 64 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Portal2"]
frames = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal2"]
shape = SubResource( 6 )

[connection signal="area_entered" from="Portal1" to="." method="_on_Portal1_area_entered"]
[connection signal="area_exited" from="Portal1" to="." method="_on_Portal1_area_exited"]
[connection signal="area_entered" from="Portal2" to="." method="_on_Portal2_area_entered"]
[connection signal="area_exited" from="Portal2" to="." method="_on_Portal2_area_exited"]
